# lonanote

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_en.md  run  run.cmd  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
cli/: .gitignore  Cargo.toml  README.md
cli/icon_gen/: Cargo.toml
cli/icon_gen/config/: icon_config.toml
cli/icon_gen/src/: config.rs  lib.rs  main.rs
cli/run/: Cargo.toml
cli/run/config/: run_config.toml
cli/run/src/: config.rs  main.rs  path.rs  run.rs  utils.rs
cli/run/src/cmd/: build.rs  dev.rs  generate.rs  install.rs  mod.rs  release.rs
cli/run/src/run/: cargo.rs  dart.rs  flutter.rs  git.rs  mod.rs  npm.rs  utils.rs
cli/utils/: Cargo.toml
cli/utils/src/: cmd.rs  fs.rs  lib.rs  utils.rs
docs/dev/: README.md  commit_emoji.md  todo.md
python/scripts/: .versionrc  build.py  changelog.py  release.py  utils.py
rust/: .gitignore  Cargo.toml
rust/app/: Cargo.toml  build.rs
rust/app/src/: frb_generated.rs  lib.rs
rust/commands/: Cargo.toml
rust/commands/src/: lib.rs
rust/commands/src/body/: body.rs
rust/commands/src/commands/: commands_async.rs  commands_callback.rs  commands_js.rs  commands_sync.rs  mod.rs
rust/commands/src/context/: context.rs  mod.rs
rust/commands/src/handler/: from_command_args.rs  handler.rs  handler_async.rs  mod.rs
rust/commands/src/result/: result.rs
rust/core/: Cargo.toml
rust/core/assets/: default_ignore.txt
rust/core/assets/default_workspace/: README.md  README_en.md
rust/core/src/: lib.rs
rust/core/src/api/: app.rs  fs.rs  mod.rs  path.rs  settings.rs
rust/core/src/api/app/: app_api.rs  mod.rs
rust/core/src/api/fs/: fs_api.rs  mod.rs
rust/core/src/api/generate/: generate_api.rs
rust/core/src/api/path/: mod.rs  path_api.rs
rust/core/src/api/settings/: mod.rs  settings.rs  settings_api.rs
rust/core/src/api/store/: mod.rs  store_api.rs  store_impl.rs
rust/core/src/api/test/: hello_commands.rs  mod.rs
rust/core/src/api/workspace/: mod.rs  workspace.rs  workspace_instance_api.rs  workspace_manager.rs  workspace_manager_api.rs  workspace_registry_api.rs  workspace_runtime_api.rs
rust/core/src/config/: app_path.rs  mod.rs
rust/core/src/settings/: config.rs  mod.rs  settings.rs
rust/core/src/utils/: fs_utils.rs  mod.rs  time_utils.rs
rust/core/src/workspace/: config.rs  error.rs  file_metadata.rs  mod.rs  workspace.rs  workspace_index.rs  workspace_instance.rs  workspace_locator.rs  workspace_manager.rs  workspace_metadata.rs  workspace_path.rs  workspace_registry.rs  workspace_runtime.rs  workspace_savedata.rs  workspace_settings.rs
rust/core/src/workspace/file_tree/: file_node.rs  file_tree_sort.rs  file_tree_sort_type.rs  file_type.rs  mod.rs
rust/core/src/workspace/tests/: initialization.rs  mod.rs  registry_runtime.rs  roots_sync.rs  support.rs
rust/core/tests/: workspace_api_commands.rs
rust/core/tests/workspace_api_commands/: command_registry.rs  path_commands.rs  settings_commands.rs  support.rs  workspace_registry_commands.rs  workspace_runtime_commands.rs
rust/mobile/: .taurignore  Cargo.toml  Tauri.toml  build.rs
rust/mobile/capabilities/: main.json  plugins.json
rust/mobile/src/: lib.rs  main.rs
rust/mobile/src/commands/: commands.rs  invoke.rs  mod.rs
rust/node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
rust/node/src/: lib.rs
rust/utils/: Cargo.toml
rust/utils/src/path/: mod.rs  path_plugin.rs
rust/utils/src/shell/: mod.rs  shell_impl.rs  shell_plugin.rs
rust/utils/src/store/: mod.rs  store_impl.rs  store_plugin.rs
ui/: .editorconfig  .env  .env.development  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  .taurignore  Cargo.toml  README.md  Trunk.toml  app.config.ts  app.json  babel.config.js  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  flutter_launcher_icons.yaml  index.html  metro.config.js  package.json  pnpm-lock.yaml  pubspec.yaml  sdk_config.txt  tamagui.build.ts  tamagui.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
ui/core/: pubspec.yaml
ui/core/rust/: .gitignore  Cargo.toml
ui/core/rust/src/api/: command.rs
ui/editor/: .gitignore  .prettierignore  index.html  tsconfig.node.json  tsconfig.web.json  vite.config.ts
ui/flutter/: .gitignore  README.md  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml
ui/lib/: main.dart
ui/linux/: CMakeLists.txt
ui/patches/: @expo+metro-file-map@56.0.3.patch  @expo+ui@55.0.17.patch  @gorhom+bottom-sheet@5.2.14.patch  @lodev09+react-native-true-sheet@3.11.0.patch  @lodev09+react-native-true-sheet@3.11.1.patch  @react-native-picker+picker@2.11.4.patch  @tamagui+create-menu@2.1.0.patch  @tamagui+dialog@2.1.0.patch  @tamagui+dialog@2.4.0.patch  @tamagui+native@2.1.0.patch  @tamagui+native@2.4.0.patch  @tamagui+portal@2.1.0.patch  @tamagui+portal@2.4.0.patch  @tamagui+toast@2.0.0.patch  @tamagui+toast@2.1.0.patch  @tamagui+web@2.1.0.patch  expo-haptics@55.0.14.patch  expo-modules-autolinking@56.0.15.patch  (+7 more)
ui/rust/crates/lib/: Cargo.toml
ui/rust/crates/lib/include/: CrabySignals.h
ui/rust/crates/lib/src/: ffi.rs  generated.rs  lib.rs  lonanote_rust_module_impl.rs
ui/src-rs/crates/lib/: Cargo.toml
ui/src-rs/crates/lib/include/: CrabySignals.h
ui/src-rs/crates/lib/src/: ffi.rs  generated.rs  lib.rs  lonanote_ui_core_impl.rs
ui/src-tauri/: Cargo.toml  Tauri.macos.toml  Tauri.toml  Tauri.windows.toml
ui/src-tauri/capabilities/: main.json  plugins.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/permission/: plugins.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src-tauri/src/commands/: invoke.rs  mod.rs
ui/src-tauri/src/commands/api/: mod.rs  win_api.rs
ui/src-tauri/src/plugins/: mod.rs
ui/src-tauri/src/plugins/path/: path_impl.rs
ui/src-tauri/src/plugins/utils/: mod.rs  utils_impl.rs  utils_plugin.rs
ui/src-tauri/src/setup/: log.rs  mod.rs  window.rs
ui/src-tauri/src/utils/: win.rs
ui/src-tauri/src/utils/titlebar/: mod.rs
ui/src-tauri/src/utils/titlebar/js/: controls.js
(+1405 files in other folders)
