[workspace]
members = ["rust/core", "rust/commands", "ui", "ui/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["luoluoqixi"]
repository = "https://github.com/luoluoqixi/lonanote"
license = ""

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
anyhow = "1.0.98"
log = "0.4.27"
thiserror = "2.0.12"
notify = "8.0.0"
ignore = "0.4.23"
fs_extra = "1.3.0"
walkdir = "2.5.0"
relative-path = "1.9.3"
fork = "0.2.0"
rfd = "0.15.3"
fern = "0.7.1"
chrono = "0.4.40"
indexmap = "2.9.0"
alphanumeric-sort = "1.5.3"
trash = "5.2.2"
encoding_rs = "0.8.35"
reqwest  = { version = "0.12.15", default-features = false }
futures = "0.3.31"
rust-embed = "8.7.2"

# tauri
tauri-build = { version = "2.5.6" }
tauri = { version = "2.10.3" }
specta = { version = "=2.0.0-rc.24" }
tauri-plugin-clipboard-manager = { version = "2.3.2" }
tauri-plugin-decorum = { version = "1.1.1" }
tauri-plugin-fs = { version = "2.5.0" }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-os = { version = "2.3.2" }
tauri-plugin-dialog = { version = "2.7.0" }
tauri-plugin-shell = { version = "2.3.5" }
# tauri-plugin-updater = { version = "2.10.1" }

# leptos
leptos = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Remove debug symbols
