[workspace]
members = ["rust/core", "ui/src-rs"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["luoluoqixi"]
repository = "https://github.com/luoluoqixi/lonanote"
license = ""

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
log = "0.4"
thiserror = "2.0"
notify = "8.2"
ignore = "0.4"
fs_extra = "1.3"
walkdir = "2.5"
relative-path = "2.0"
fork = "0.7"
rfd = "0.17"
fern = "0.7"
chrono = "0.4"
indexmap = "2.14"
alphanumeric-sort = "1.5"
trash = "5.2"
encoding_rs = "0.8"
reqwest  = { version = "0.13", default-features = false }
futures = "0.3"
rust-embed = "8.11"

cmdreg = "0.1"

# tauri
tauri-build = { version = "2.5.6" }
tauri = { version = "2.10.3" }
specta = { version = "=2.0.0-rc.24" }
tauri-plugin-clipboard-manager = { version = "2.3.2" }
tauri-plugin-decorum = { version = "1.1.1" }
tauri-plugin-fs = { version = "2.5.0" }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-os = { version = "2.3.2" }
tauri-plugin-dialog = { version = "2.7.0" }
tauri-plugin-shell = { version = "2.3.5" }
# tauri-plugin-updater = { version = "2.10.1" }

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Remove debug symbols
