

[workspace]
members = ["icon_gen", "run"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["luoluoqixi"]
repository = "https://github.com/luoluoqixi/lonanote"
license = ""

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
fern = "0.7"
chrono = "0.4"
image = "0.25"
icns = "0.3"
clap = "4.5"
libc = "0.2"
encoding_rs = "0.8"
tokio = { version = "1.48", features = ["full"] }
