

[workspace]
members = ["icon_gen", "run", "utils"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["luoluoqixi"]
repository = "https://github.com/luoluoqixi/lonanote"
license = ""

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
fern = "0.7"
chrono = "0.4"
image = "0.25"
icns = "0.4"
clap = "4.6"
libc = "0.2"
encoding_rs = "0.8"
ctrlc = "3.5"
kill_tree = "0.2"
colored = "3.1"
which = "8"
tokio = { version = "1.52", features = ["full"] }
toml = "1.1"
serde = "1.0"
