[workspace]
members = ["core", "node", "mobile", "commands"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["luoluoqixi"]
repository = "https://github.com/lona-labs/lonanote"
license = ""

[workspace.dependencies]
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.87"
anyhow = "1.0.97"
log = "0.4.26"
thiserror = "2.0.12"
notify = "8.0.0"
ignore = "0.4.23"
fs_extra = "1.3.0"
walkdir = "2.5.0"
relative-path = "1.9.3"
fork = "0.2.0"
rfd = "0.15.2"
fern = "0.7.1"
chrono = "0.4.40"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Remove debug symbols
