[package]
name = "icon-gen"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fern = { workspace = true }
image = { workspace = true, features = ["png", "ico"] }
log = { workspace = true }
icns = { workspace = true }
