[package]
name = "run"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
clap = { workspace = true, features = ["derive"] }
encoding_rs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ctrlc = { workspace = true }
kill_tree = { workspace = true }
icon-gen = { path = "../icon_gen" }
