[package]
name = "utils"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
which = { workspace = true }
colored = { workspace = true }
kill_tree = { workspace = true }
encoding_rs = { workspace = true }
