[package]
name = "lonanote_app"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.10.0" }
anyhow = { workspace = true, features = ["backtrace"] }

[dependencies]
flutter_rust_bridge = "=2.10.0"
