[package]
name = "lonanote_app"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.11.1" }
anyhow = { workspace = true, features = ["backtrace"] }

[dependencies]
flutter_rust_bridge = "=2.11.1"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

lonanote-core = { path = "../core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
