[package]
name = "lonanote-core"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lonanote-commands = { path = "../commands" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
fs_extra = { workspace = true }
walkdir = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
