[package]
name = "lonanote-core"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lonanote-commands = { path = "../commands" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
fs_extra = { workspace = true }
walkdir = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
fern = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
alphanumeric-sort = { workspace = true }

# [target.'cfg(target_os = "windows")'.dependencies]
# [target.'cfg(target_os = "macos")'.dependencies]
[target.'cfg(target_os = "linux")'.dependencies]
fork = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
rfd = { workspace = true }
