[package]
name = "lonanote-core"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
cmdreg = { workspace = true, features = ["macros"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
fs_extra = { workspace = true }
walkdir = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
fern = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
alphanumeric-sort = { workspace = true }
encoding_rs = { workspace = true }
futures = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed"] }
uuid = { workspace = true }

# [target.'cfg(target_os = "windows")'.dependencies]
# [target.'cfg(target_os = "macos")'.dependencies]
[target.'cfg(target_os = "linux")'.dependencies]
fork = { workspace = true }


[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
rfd = { workspace = true }
trash = { workspace = true }


# cargo run --features generate_api --bin generate_api -- assets/commands.json
[[bin]]
name = "generate_api"
path = "src/api/generate/generate_api.rs"
required-features = ["generate_api"]

[package.metadata.cmdreg]
rename_all = "camelCase"

[features]
generate_api = ["cmdreg/metadata"]
