[package]
name = "lonanote-mobile"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "lonanote"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = ["config-toml"] }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

lonanote-core = { path = "../core" }

# tauri
tauri = { version = "2.1.1", features = ["config-toml", "protocol-asset"] }
specta = { version = "=2.0.0-rc.20" }
tauri-plugin-clipboard-manager = { version = "2.2.0" }
tauri-plugin-fs = { version = "2.2.0" }
tauri-plugin-log = { version = "2.2.0" }
tauri-plugin-os = { version = "2.2.0" }
tauri-plugin-dialog = { version = "2.2.0" }
tauri-plugin-shell = { version = "2.2.0" }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
