[package]
name = "lonanote-core-node"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = [
  "napi9",
  "async",
] }
napi-derive = "2.16.13"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

lonanote-core = { path = "../core" }

[build-dependencies]
napi-build = "2.1.4"
