[package]
name = "lonanote_flutter_core"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.11.1" }
anyhow = { version = "1.0", features = ["backtrace"] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"

lonanote-core = { path = "../../../rust/core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
