[package]
name = "lonanote_rust_module"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
craby = "0.1.0-rc"
cxx = { version = "1.0.187", features = ["c++20"] }
lonanote-core = { path = "../../../../rust/core" }
tokio = { version = "1.52", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
craby_build = { version = "0.1.0-rc", features = ["cxx"] }

[lib]
name = "lonanoterustmodule"
crate-type = ["staticlib"]
